:bug: Fix color contrast

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -5,7 +5,7 @@
     See https://github.com/vuejs/vitepress/blob/e4f5c51bbe25d42fd52a1cd47e83dda4254fdd7e/src/client/theme-default/styles/vars.css#L210 */
   --vp-c-brand: var(--vp-c-brand-1);
 
-  --vp-c-code-dimm: var(--vp-c-text-dark-2);
+  --vp-code-lang-color: #717171;
 }
 
 .dark {
